Create app README; add Mocha tests template

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./tests/test.js",
     "start": "node ./src/test.mjs"
   },
   "repository": {
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/amZotti/coding-challenge-soccer/issues"
   },
-  "homepage": "https://github.com/amZotti/coding-challenge-soccer#readme"
+  "homepage": "https://github.com/amZotti/coding-challenge-soccer#readme",
+  "devDependencies": {
+    "mocha": "^8.0.1"
+  }
 }
