--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha ./tests/test.js",
+    "test": "mocha ./tests/test.mjs",
     "start": "node ./src/test.mjs"
   },
   "repository": {
