--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha ./tests/test.mjs",
-    "start": "node ./src/test.mjs"
+    "start": "node ./src/mediator.mjs"
   },
   "repository": {
     "type": "git",
